updating to host on github so i can have my web domain back

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Mood Music</a>
+          <a class="navbar-brand" href="index.html">Mood Music</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,24 +22,29 @@
                 <a class="nav-link" href="#">Post <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Color Key
+                  Select By Mood
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item happymenu" href="happy.html">Happy</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item sadmenu" href="sad.html">Sad</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item relaxedmenu" href="relaxed.html">Relaxed</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item goofymenu" href="goofy.html">Goofy</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item heckyeahmenu" href="heckyeah.html">HECK YEAH!!</a>
                 </div>
               </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            </form> -->
           </div>
         </nav>
 
@@ -57,11 +62,11 @@
 
 <div class="boxes">
     <p>Posted by jondoe3 2 hours ago</p>
-    <h3>Bohemian Rhapsody - The Muppets</h3>
-    <p>Mood: <span class="goofy">GOOFY</span> </p>
-        <iframe width="420" height="315"
+    <a href="https://youtu.be/tgbNymZ7vqY"><h3>Bohemian Rhapsody - The Muppets</h3></a>
+    <p>Mood:<span class="goofy">GOOFY</span> </p>
+       <div class="youtube"> <iframe width="420" height="315"
               src="https://www.youtube.com/embed/tgbNymZ7vqY">
-        </iframe>
+        </iframe></div>
   <br><br>
     <p>What mood does this put you in?</p>
         <span class="happy">HAPPY</span>
@@ -74,11 +79,11 @@
 
 <div class="boxes">
     <p>Posted by jondoe3 2 hours ago</p>
-    <h3>thank u, next - Ariana Grande</h3>
+    <a href="https://youtu.be/gl1aHhXnN1k"><h3>thank u, next - Ariana Grande</h3></a>
     <p>Mood:<span class="relaxed">RELAXED</span> </p>
-        <iframe width="420" height="315"
+    <div class="youtube"><iframe width="420" height="315"
               src="https://www.youtube.com/embed/gl1aHhXnN1k">
-        </iframe>
+        </iframe></div>
   <br><br>
     <p>What mood does this put you in?</p>
         <span class="happy">HAPPY</span>
@@ -91,11 +96,11 @@
 
 <div class="boxes">
     <p>Posted by jondoe3 2 hours ago</p>
-    <h3>Post Malone - "Wow."</h3>
+    <a href="https://youtu.be/D0i23wZ0IeE"><h3>Post Malone - "Wow."</h3></a>
     <p>Mood: <span class="heckyeah">HECK YEAH!!</span> </p>
-        <iframe width="420" height="315"
+    <div class="youtube"><iframe width="420" height="315"
                     src="https://www.youtube.com/embed/D0i23wZ0IeE">
-        </iframe>
+        </iframe></div>
 <br><br>
     <p>What mood does this put you in?</p>
           <span class="happy">HAPPY</span>
@@ -108,11 +113,11 @@
         
 <div class="boxes">
     <p>Posted by jondoe3 2 hours ago</p>
-    <h3>Without Me - Halsey</h3>
+    <a href="https://youtu.be/ZAfAud_M_mg"><h3>Without Me - Halsey</h3></a>
     <p>Mood: <span class="sad">SAD</span> </p>
-      <iframe width="420" height="315"
+    <div class="youtube"><iframe width="420" height="315"
             src="https://www.youtube.com/embed/ZAfAud_M_mg">
-      </iframe>
+      </iframe></div>
 <br><br>
   <p>What mood does this put you in?</p>
       <span class="happy">HAPPY</span>
@@ -125,11 +130,11 @@
 
 <div class="boxes">
     <p>Posted by jondoe3 2 hours ago</p>
-    <h3>Chills feat. Joey Myron - Mickey Valen</h3>
+    <a href="https://youtu.be/_Qx7uhbYxyM"><h3>Chills feat. Joey Myron - Mickey Valen</h3></a>
     <p>Mood: <span class="relaxed">RELAXED</span> </p>
-        <iframe width="420" height="315"
+    <div class="youtube"> <iframe width="420" height="315"
                   src="https://www.youtube.com/embed/_Qx7uhbYxyM">
-        </iframe>
+        </iframe></div>
     <br><br>
     <p>What mood does this put you in?</p>
         <span class="happy">HAPPY</span>
@@ -142,11 +147,11 @@
 
 <div class="boxes">
     <p>Posted by jondoe3 2 hours ago</p>
-    <h3>Sail - AWOLNATION</h3>
+    <a href="https://youtu.be/_Qx7uhbYxyM"><h3>Sail - AWOLNATION</h3></a>
     <p>Mood: <span class="heckyeah">HECK YEAH!!</span> </p>
-      <iframe width="420" height="315"
+    <div class="youtube"><iframe width="420" height="315"
                 src="https://www.youtube.com/embed/tgIqecROs5M">
-      </iframe>
+      </iframe></div>
   <br><br>
   <p>What mood does this put you in?</p>
       <span class="happy">HAPPY</span>
@@ -160,11 +165,11 @@
 
 <div class="boxes">
   <p>Posted by jondoe3 2 hours ago</p>
-    <h3>Down With The Sickness (Explicit)- Disturbed</h3>
+  <a href="https://youtu.be/HkhfL0pnMPQ"><h3>Down With The Sickness (Explicit)- Disturbed</h3></a>
   <p>Mood: <span class="heckyeah">HECK YEAH!!</span> </p>
-        <iframe width="420" height="315"
+  <div class="youtube"><iframe width="420" height="315"
             src="https://www.youtube.com/embed/HkhfL0pnMPQ">
-        </iframe>
+        </iframe></div>
 <br><br>
     <p>What mood does this put you in?</p>
           <span class="happy">HAPPY</span>
@@ -177,11 +182,11 @@
 
 <div class="boxes">
    <p>Posted by jondoe3 2 hours ago</p>
-    <h3>HAPPY - Pharrell Williams (feat. Minions)</h3>
+   <a href="https://youtu.be/MOWDb2TBYDg"><h3>HAPPY - Pharrell Williams (feat. Minions)</h3></a>
       <p>Mood: <span class="happy">HAPPY</span> </p>
-        <iframe width="420" height="315"
+      <div class="youtube"><iframe width="420" height="315"
                     src="https://www.youtube.com/embed/MOWDb2TBYDg">
-        </iframe>
+        </iframe></div>
 <br><br>
     <p>What mood does this put you in?</p>
           <span class="happy">HAPPY</span>
@@ -195,14 +200,6 @@
 <footer>
 
 </footer>
-
-
-
-
-
-
-
-
 
   <!-- SCRIPTS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
